# xrf197ilz35aq1

./: .env  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
config/: app.yml  dev.yml  local.yml
proto/: address.proto  asset.proto
proto/asset/v1/: asset.proto
proto/contract/v1/: contract.proto
src/: common.rs  configs.rs  constant.rs  context.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/configs/: database.rs  load.rs  mod.rs  setup.rs
src/core/: mod.rs
src/core/domain/: asset.rs  contract.rs  currency.rs  error.rs  key.rs  mod.rs  nfc.rs
src/core/orchestrator/: asset.rs  mod.rs
src/core/queries/: asset.rs  contract.rs  mod.rs  nfc.rs  ordering.rs  user.rs
src/server/: mod.rs
src/server/grpc/: asset_service.rs  header.rs  interceptors.rs  mod.rs  server.rs
src/server/grpc/services/: asset.rs  contract.rs  mod.rs
src/server/http/: mod.rs  routes.rs  server.rs
src/telemetry/: interceptor.rs  mod.rs  setup.rs
tests/app/: helpers.rs  main.rs  seed.rs
tests/app/queries/: asset.rs  contract.rs  mod.rs  nfc.rs  suit.rs
