[package]
name = "xrf1"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.41"
rand = "0.9.2"
actix-web = "4.11.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
config = "0.15.13"
anyhow = "1.0.98"
secrecy = { version = "0.10.3", features = ["serde"] }
tower = { version = "0.5.2", features = ["full"] }
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` & `#[derive(Deserialize)]`. The feature is not enabled by default to avoid pulling
# unnecessary deps for projects that do not need it.
serde = { version = "1.0.219", features = ["derive"] }
# environment variables are strings for the config crate,
# and it will fail to pick up integers if using the standard deserialization routine from serde.
# serde-aux is used to specify a custom deserialization function for things like string to u16
serde-aux = "4.7.0"

tonic = { version = "0.14.0", features = ["tls-native-roots"] }
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.0"

uuid = { version = "1.17.0", features = ["v4"] }
async-stream = "0.3.6"

strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["derive"] }
rayon = "1.10.0"
lazy_static = "1.5.0"
ring = "0.17.14"
hex = "0.4.3"
sha2 = "0.11.0-rc.0"
base64 = "0.22.1"
getrandom = "0.3.3"
bytes = "1.10.1"
thiserror = "2.0.12"
futures = "0.3.31"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls", # tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros", # “gives us access to sqlx::query! and sqlx::query_as!”
    "postgres", # unlocks Postgres-specific functionality (e.g.non-standard SQL types)
    "chrono", # “adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate”
    "migrate" # “gives us access to the same functions used under the hood by sqlx-cli to manage migrations”
]

[build-dependencies]
tonic-prost-build = "0.14.0"
